# video-streaming-demo-server

./: Dockerfile.api  Dockerfile.worker  LICENSE  README.md  docker-compose.yml  pyproject.toml
app/: auth.py  config.py  database.py  main.py  storage.py
nginx/: nginx.conf
templates/: dashboard.html  video_player.html
worker/: tasks.py
