[project]
name = "video-streaming-demo-server"
version = "0.1.0"
description = ""
authors = [
    {name = "tharhtetsan",email = "tharhtetsan.ai@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.138.1,<0.139.0)",
    "gunicorn (>=26.0.0,<27.0.0)",
    "uvicorn (>=0.49.0,<0.50.0)",
    "python-multipart (>=0.0.32,<0.0.33)",
    "jinja2 (>=3.1.6,<4.0.0)",
    "aiofiles (>=25.1.0,<26.0.0)",
    "sqlalchemy (>=2.0.51,<3.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "alembic (>=1.18.5,<2.0.0)",
    "python-jose (>=3.5.0,<4.0.0)",
    "passlib (>=1.7.4,<2.0.0)",
    "celery (>=5.6.3,<6.0.0)",
    "redis (>=8.0.1,<9.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "pydantic-settings (>=2.14.2,<3.0.0)",
    "psycopg2-binary (>=2.9.12,<3.0.0)",
    "aioboto3 (>=15.5.0,<16.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
